--- a/bitcamp2017/templates/layouts/layout1.html
+++ b/bitcamp2017/templates/layouts/layout1.html
@@ -43,7 +43,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#portfolio">How</a>
+                        <a href="#portfolio">How </a>
                     </li>
                     <li class="page-scroll">
                         <a href="#about">About</a>
@@ -126,27 +126,24 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>What we used</h2>
+                            <h2>Helping Patients</h2>
                             <hr class="star-primary">
 
-                            <p>We implemented this website using python, flask, bootstrap, and php within 36 hours.</p>
+                            <p>Patients' daily mental state will be monitored by mental health professionals. Allowing themto create more effective treatment plans.</p>
                             <ul class="list-inline item-details">
                                 <li>
-                                    Client:
                                     <strong>
-                                        <a href="http://startbootstrap.com">Start Bootstrap</a>
+                                        <p> Patients will recieve better care.</p>
                                     </strong>
                                 </li>
                                 <li>
-                                    Date:
                                     <strong>
-                                        <a href="http://startbootstrap.com">April 2017</a>
+                                        <p> Patients will be at less risk of a mental breakdown or illness.</p>
                                     </strong>
                                 </li>
                                 <li>
-                                    Service:
                                     <strong>
-                                        <a href="http://startbootstrap.com">Web Development</a>
+                                        <p>Patients will have to spend less time being hospitalized. </p>
                                     </strong>
                                 </li>
                             </ul>
@@ -169,27 +166,24 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>How the idea started</h2>
+                            <h2>Benefits for mental health professionals</h2>
                             <hr class="star-primary">
 
-                            <p>At first we envisioned creating an android app using Andriod Studios but soon we figured this was a bit too ambition for our experience and time frame so we switched over to web development.</p>
+                            <p>Health professionals will be kept up-to-date on the mental health of their patients. </p>
                             <ul class="list-inline item-details">
                                 <li>
-                                    Client:
                                     <strong>
-                                        <a href="http://startbootstrap.com">Start Bootstrap</a>
+                                        <p> Health professionals have more time to prepare more comprehensive treatments.</p>
                                     </strong>
                                 </li>
                                 <li>
-                                    Date:
                                     <strong>
-                                        <a href="http://startbootstrap.com">April 2017</a>
+                                        <p> Health professionals will be able to help more patients, thus doing more good.</p>
                                     </strong>
                                 </li>
                                 <li>
-                                    Service:
                                     <strong>
-                                        <a href="http://startbootstrap.com">Web Development</a>
+                                        <p> Health professionals will be better equiped to make a diagonsis.</p>
                                     </strong>
                                 </li>
                             </ul>
@@ -212,27 +206,24 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Challenges</h2>
+                            <h2>Coding Languages used</h2>
                             <hr class="star-primary">
 
-                            <p>We were able to finish this project even though all the challenges that faced us and we learned a lot about coding wesites/apps. Somehow we even overcame the wifi.</p>
+                            <p>HTML5,PHP,Python</p>
                             <ul class="list-inline item-details">
                                 <li>
-                                    Client:
                                     <strong>
-                                        <a href="http://startbootstrap.com">Start Bootstrap</a>
+                                        <a "https://developer.mozilla.org/en-US/docs/Web/HTML">HTML5</a>
                                     </strong>
                                 </li>
                                 <li>
-                                    Date:
                                     <strong>
-                                        <a href="http://startbootstrap.com">April 2017</a>
+                                        <a href="https://en.wikipedia.org/wiki/PHP">PHP</a>
                                     </strong>
                                 </li>
                                 <li>
-                                    Service:
                                     <strong>
-                                        <a href="http://startbootstrap.com">Web Development</a>
+                                        <a href="https://www.python.org/">Python</a>
                                     </strong>
                                 </li>
                             </ul>
