--- a/bitcamp2017/templates/index.html
+++ b/bitcamp2017/templates/index.html
@@ -1,16 +1,14 @@
 ﻿{% extends "layouts/layout1.html" %}
 {% block title %}
-Life Ok
+Our custom title
 {% endblock %}
 {% block content %}
-
     <!-- Header -->
 <header>
-
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
-                <img class="img-responsive" src="/static/img/logo.png" width="300" height="100"alt="">
+                <img class="img-responsive" src="/static/img/profile.png" width="400" height="200"alt="">
                 <div class="intro-text">
                     <span class="name">LifeOk</span>
                     <hr class="star-light">
@@ -25,7 +23,7 @@ Life Ok
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2>How</h2>
+                <h2>Our Mission</h2>
                 <hr class="star-primary">
             </div>
         </div>
@@ -68,7 +66,7 @@ Life Ok
     <div class="container">
         <div class="row">
             <div class="col-lg-12 text-center">
-                <h2>About</h2>
+                <h2>About Us</h2>
                 <hr class="star-light">
             </div>
         </div>
